tests/negative/regression/r22.orng
// r22.orng:6:27: error: expected a value of type `Int`, got a value of type `()`
//     const ident = { return }
//                          ^
// 
fn main() -> Int { 
    const ident = { return }
} 
